--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-flow: column;
   width: 100vw;
-  height: 100vh;
+  height: var(--doc-height);
   background-color: var(--mainBack);
   color: var(--mainFore);
   overflow: hidden;
