--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,11 +18,12 @@ html, body {
 }
 
 body {
+  --doc-height: 100vh;
   display: flex;
   flex-flow: column;
   overflow: hidden;
   width: 100vw;
-  height: 100vh;
+  height: var(--doc-height);
   margin: 0;
   padding: 0;
   align-items: center;
@@ -168,6 +169,10 @@ body {
   --5elemstart-toggle-off: #d0d0ff;
   --5elemstart-toggle-bar-on: rgba(160, 160, 255, 0.5);
   --5elemstart-toggle-bar-off: rgba(255, 255, 255, 0.2);
+
+  --prolog-back: rgba(128, 0, 128, 1);
+  --prolog-fore: rgba(0, 0, 0, 0.6);
+  --foot-color: rgba(0, 0, 0, 0.6);
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
@@ -475,7 +480,7 @@ div[property-panel] {
   }
   100% {
     left: 50%;
-    top: -140px;
+    top: -300px;
     transform: translateX(-50%) scale(1);
   }
 }
@@ -495,5 +500,37 @@ div[property-panel] {
   }
   100% {
     transform: rotate(45deg);
+  }
+}
+
+@keyframes footBack {
+  0% {
+    transform: translateX(var(--x)) rotate(0);
+  }
+  12%, 100% {
+    transform: translateX(var(--x)) rotate(var(--d));
+  }
+}
+
+@keyframes footFront {
+  0% {
+    transform: translate(var(--x), 0);
+  }
+  15% {
+    transform: translate(var(--x), 0);
+  }
+  25%, 100% {
+    transform: translate(var(--x), var(--y));
+  }
+}
+
+@keyframes footText {
+  80% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(20);
+    opacity: 0;
   }
 }
